# kwcm1

./: README.md
scr/: CMakeLists.txt  main.cpp
scr/Trygonometria/: trygonometria.cpp  trygonometria.h
